--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -73,6 +73,7 @@
 
       img {
         margin-right: 4px;
+        width: 16px;
         max-width: 100%;
         max-height: 100%;
         vertical-align: middle;
@@ -96,11 +97,13 @@
 
     .plus {
       width: 104px;
+      opacity: 0.5;
     }
 
     .more {
       float: right;
       width: 40px;
+      opacity: 0.5;
     }
 
     :global {
