--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -96,6 +96,14 @@
             line-height: 32px;
           }
         }
+
+        .operationBtn {
+          margin-left: 192px;
+
+          button {
+            margin-right: 12px;
+          }
+        }
       }
     }
   }
