feat: User pages integrate API (#364)

--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -83,7 +83,7 @@
           }
         }
         .textareaItem{
-          height: 88px;
+          height: 80px;
           & > label {
             float: left;
             position: relative;
@@ -94,6 +94,14 @@
           & > label{
             float: left;
             line-height: 32px;
+          }
+        }
+
+        .operationBtn {
+          margin-left: 192px;
+
+          button {
+            margin-right: 12px;
           }
         }
       }
