--- a/src/pages/Admin/Users/GroupCard/index.scss
+++ b/src/pages/Admin/Users/GroupCard/index.scss
@@ -4,6 +4,7 @@
   li {
     box-sizing: border-box;
     margin-bottom: 12px;
+    min-height: 142px;
     padding: 24px;
     border-radius: 3px;
     background-color: $N10;
