--- a/src/components/DetailTabs/index.scss
+++ b/src/components/DetailTabs/index.scss
@@ -1,6 +1,6 @@
 @import "~scss/vars";
 
-.tagNav {
+.detailTabs {
   //margin: -16px -24px 24px;
 
   padding: 0 24px;
@@ -8,7 +8,7 @@
   background: $N0;
   border-bottom: 1px solid $N10;
 
-  .tag{
+  .tab{
     display: inline-block;
     padding: 15px 0;
     margin-right: 24px;
