--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -135,3 +135,33 @@
   }
 }
 
+.addNodesBtn {
+  .addNodeTxt {
+    margin-left: 3px;
+    margin-top: -8px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
+
+.nodeConfKey {
+  margin-left: 3px;
+}
+
+.wrapAddNodes {
+  .formControl {
+    margin-bottom: 10px;
+
+    &> label {
+      display: inline-block;
+      width: 5em;
+    }
+  }
+  .input {
+    display: inline-block;
+    width: 300px;
+  }
+  .hide {
+    display: none;
+  }
+}
