--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -65,7 +65,7 @@ $input-item-height: 48px;
     text-align: left;
 
     .notifyItem {
-      width: 240px;
+      //width: 240px;
       min-width: 240px;
     }
   }
