feat: Profile page integrate API

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -162,4 +162,12 @@
     cursor: not-allowed;
     pointer-events: none;
   }
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus {
+    box-shadow:0 0 0 60px white  inset;
+    -webkit-text-fill-color: #878787;
+  }
+
 }
