--- a/src/components/Status/index.scss
+++ b/src/components/Status/index.scss
@@ -2,6 +2,10 @@
 
 .status {
   text-transform: capitalize;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  align-items: center;
 }
 
 
