--- a/src/pages/Admin/Overview/RepoList/index.scss
+++ b/src/pages/Admin/Overview/RepoList/index.scss
@@ -8,8 +8,8 @@
     height: 60px;
     line-height: 24px;
     border-radius: 2px;
-    background-color: $N10;
-    border: solid 1px $N30;
+    background-color: $N0;
+    border: 1px solid $N10;
     a{
       display: block;
       padding: 17px 16px;
@@ -49,7 +49,7 @@
 }
 .reposBg{
   li {
-    background-color: $N0;
-    border-color: $N10;
+    background-color: $N10;
+    border-color: $N30;
   }
 }
