fix: Modify app reviews page data
*feat: Cluster node table add eip

--- a/src/components/Status/index.scss
+++ b/src/components/Status/index.scss
@@ -33,7 +33,7 @@
   &.active, &.successful {
     background-color: $G75;
   }
-  &.deleted, &.failed {
+  &.deleted, &.failed, &.rejected {
     background-color: $R300;
   }
   &.enabled {
