--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -123,3 +123,15 @@
     // }
   }
 }
+
+:global {
+  .ipShow {
+    font-size: 12px;
+    line-height: 20px;
+
+    .eip {
+      color: $N100;
+    }
+  }
+}
+
