fix: Resolve developer menu app show bug
* fix: Add menu tips style

--- a/src/components/Base/Tooltip/index.scss
+++ b/src/components/Base/Tooltip/index.scss
@@ -34,7 +34,8 @@ $bgcolor: $text-color;
 }
 
 .popper {
-  padding: 8px 0;
+  //padding: 8px 0;
+  padding: 8px 12px;
   border-radius: 3px;
   font-size: $size-small;
   line-height: 1.5;
