--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -219,18 +219,23 @@
     }
   }
 
-  .operateItems{
+  .operateItems {
     min-width: 120px;
-    li a{
-      display: block;
-      height: 32px;
-      padding: 0 12px;
-      //width: 100%;
-      line-height: 32px;
-      font-size: $font14;
-      font-weight: normal;
-      color: $N300;
-      border-radius: 0;
+    li {
+      > a,
+      > label{
+        display: block;
+        height: 32px;
+        padding: 0 12px;
+        //width: 100%;
+        line-height: 32px;
+        font-size: $font14;
+        font-weight: normal;
+        color: $N300;
+        border-radius: 0;
+        cursor: pointer;
+      }
+
       &:hover {
         background-color: $N10;
         color: $N500;
