--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -33,7 +33,6 @@
       height: 48px;
 
       >a {
-        background-color: rgba($N0, 0.08);
         display: inline-block;
         height: 48px;
         width: 100%;
@@ -51,8 +50,12 @@
       transition: all .3s ease-in-out;
 
       :global {
-        .icon{
+        .icon {
           margin: 12px;
+        }
+
+        .icon-op-logo{
+          margin: 16px;
         }
       }
     }
