feat: Add rejected reason show
* fix: Deploy app query runtime and skip url bug

--- a/src/pages/Admin/Apps/Detail/index.scss
+++ b/src/pages/Admin/Apps/Detail/index.scss
@@ -66,6 +66,10 @@
       width: calc(65% - 12px);
       vertical-align: top;
 
+      &.message {
+        margin-top: 8px;
+      }
+
       button {
         margin-right: 12px;
       }
