--- a/src/scss/partial/_grid.scss
+++ b/src/scss/partial/_grid.scss
@@ -3,9 +3,12 @@ $menu-width: 248px;
 $menu-nav-width: 48px;
 $menu-sub-nav-width: 200px;
 $columns: 12;
-$grid-gap: 24px;
+
+$grid-gap: 24px;  // gap for normal layout
+$grid-gap-dev: 20px;  // gap for dev/admin layout
 //$grid-width: 72px;
-$grid-width: calc(100% + #{$grid-gap})/12;
+$grid-width: calc(100% + #{$grid-gap}) / 12;
+$grid-width-dev: calc(100% + #{$grid-gap-dev}) / 12;
 
 $layout-margin: 156px;
 
