--- a/src/components/TagShow/index.scss
+++ b/src/components/TagShow/index.scss
@@ -23,7 +23,7 @@
     padding: 3px 12px 3px 5px;
     background-color: $Y45;
     border-radius: 0 9.5px 9.5px 0;
-    max-width: 100px;
+    max-width: 49%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
