feat: Add cluster attach or detach key pairs
* fix: Home detail header show bug

* fix Purchased page apps query bug

--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -165,3 +165,62 @@
     display: none;
   }
 }
+
+.attachContent {
+  max-height: 232px;
+  overflow-y: auto;
+
+  .sshCardOuter {
+    display: inline-block;
+    margin: 0 20px 20px 0;
+    width: calc(50% - 10px);
+    border: 1px solid $N10;
+    cursor: pointer;
+
+    &:nth-child(2n+2) {
+      margin-right: 0;
+    }
+
+    &.active {
+      border: 1px solid $P75;
+      cursor: auto;
+    }
+  }
+
+  .sshCard {
+    padding: 10px 20px;
+
+    .title {
+      margin-bottom: 18px;
+      line-height: 16px;
+      font-size: 14px;
+      font-weight: 500;
+      color: $N500;
+      max-width: 230px;
+      @include textCut;
+    }
+
+    .pubKey{
+      height: 20px;
+      line-height: 20px;
+      font-size: 12px;
+      color: $N75;
+      height: 40px;
+      word-break: break-all;
+      word-wrap: break-word;
+      overflow: hidden;
+    }
+  }
+}
+
+.operateBtns {
+  padding: 16px 32px;
+  border-top: 1px solid $N10;
+  text-align: center;
+  button {
+    margin-right: 20px;
+    &:last-of-type {
+      margin-right: 0;
+    }
+  }
+}
