--- a/src/pages/SSHKeys/index.scss
+++ b/src/pages/SSHKeys/index.scss
@@ -131,3 +131,12 @@ form.createForm {
   line-height: 24px;
   color: $N300;
 }
+
+.ipShow {
+  font-size: 12px;
+  line-height: 20px;
+
+  .eip {
+    color: $N100;
+  }
+}
