fix: Styles and bug list
See: #436

--- a/src/pages/AppDetail/Body/Helm/index.scss
+++ b/src/pages/AppDetail/Body/Helm/index.scss
@@ -115,6 +115,7 @@
         overflow: auto;
         margin: 10px 0;
         padding: 6px 10px;
+        font-family: "Roboto Mono", sans-serif;
       }
 
       pre > code {
