--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -170,4 +170,7 @@
     -webkit-text-fill-color: #878787;
   }
 
+  .CodeMirror {
+    font-family: "roboto monospace", monospace, sans-serif;
+  }
 }
