fix: Developer related style issues
See: #434

--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -103,7 +103,7 @@
       padding: 6px 12px;
       font-size: 12px;
       font-weight: 500;
-      line-height: 16px;
+      //line-height: 16px;
       color: $N0;
       text-align: left;
       @include textCut;
@@ -148,7 +148,7 @@
       display: inline-block;
       position: relative;
       bottom: -16px;
-      left: 24px;
+      left: 22px;
       padding: 0 3px;
       line-height: 32px;
       font-size: 12px;
