fix: Developer menu apps refresh bug
* fix: Categories query and create btn bug

* fix: Add role desc, app version desc bug

--- a/src/pages/Admin/Users/GroupCard/index.scss
+++ b/src/pages/Admin/Users/GroupCard/index.scss
@@ -42,7 +42,7 @@
   }
 
   .description {
-    height: 40px;
+    min-height: 40px;
     font-size: 12px;
     line-height: 20px;
     color: $N100;
