--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -5,13 +5,15 @@
    width: $app-card-width;
    height: $app-card-height;
    padding: 40px 20px 20px;
-   margin: 0 24px 24px 0;
+   //margin: 0 24px 24px 0;
    border-radius: 2px;
    //border: 1px solid $border-light;
    background-color: $N0;
    transition: all .3s ease-in-out;
    text-align: center;
    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+   cursor: pointer;
+
   p {
      margin: 0;
    }
@@ -65,6 +67,9 @@
   padding: 18px 16px;
   text-align: left;
   position: relative;
+  margin: 0 24px 24px 0;
+
+
   .title{
     .icon {
       float: left;
