fix: Resolve github normal user bugs issue

--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -32,7 +32,7 @@
   }
 
   .body {
-    padding: 20px 32px 30px;
+    padding: 20px 32px;
     //overflow-y: auto;
     :global{
       .formContent{
