--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -15,9 +15,9 @@
     color: $title-color;
     .more{
       float: right;
-      font-size: 14px;
       font-weight: normal;
       cursor: pointer;
+      @include moreText();
     }
   }
 }
