--- a/src/pages/Runtimes/index.scss
+++ b/src/pages/Runtimes/index.scss
@@ -23,10 +23,15 @@
   float: left;
   display: inline-block;
   margin: 0 24px 24px 0;
-  width: calc(33.333% - 16px);
+  width: calc(33.333% - 17px);
   height: 189px;
   background-color: $N0;
   box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+
+  &:nth-child(3n+1) {
+    margin-left: 2px;
+  }
+
   &:nth-child(3n+3) {
     margin-right: 0;
   }
@@ -35,12 +40,16 @@
 .addRuntime {
   float: left;
   display: inline-block;
-  width: calc(33.33% - 20px);
-  height: 189px;
+  width: calc(33.33% - 21px);
+  height: 185px;
   background-color: $N0;
-  border: dashed 1px $P30;
+  border: dashed 2px $P10;
   text-align: center;
   cursor: pointer;
+
+  &:hover {
+    border: 2px dashed $P30;
+  }
 
   :global{
     .icon{
