fix: Deploy app query no runtimes add note
fix: Admin overview repo list show bug

--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -155,7 +155,11 @@
 
       &:last-child {
         //border-right: 48px solid #fff;
+        [class*='TimeShow'] {
+          text-align: center;
+        }
       }
+
     }
 
     &-placeholder {
