--- a/src/components/TagShow/index.scss
+++ b/src/components/TagShow/index.scss
@@ -19,6 +19,7 @@
     overflow: auto;
   }
   .content{
+    float: right;
     display: inline-block;
     padding: 3px 12px 3px 5px;
     background-color: $Y45;
