--- a/src/components/TimeShow/index.scss
+++ b/src/components/TimeShow/index.scss
@@ -1,14 +1,16 @@
 @import "~scss/vars";
 
-.detailTime{
+.detailTime {
   display: inline-block;
-  margin-right: 5px;
+  font-size: 12px;
 }
-.listTime{
+
+.listTime {
   font-size: 12px;
   color: $N100;
 }
-.lineTime{
+
+.lineTime {
   display: inline-block;
   margin-right: 5px;
   font-size: 12px;
