feat: Add vm config parser
Refactor app deployment

--- a/src/components/Layout/CreateResource/index.scss
+++ b/src/components/Layout/CreateResource/index.scss
@@ -21,6 +21,11 @@
       color: $N500;
       border-bottom: 1px solid $N10;
     }
+
+    .footer {
+      padding: 20px 0;
+      border-top: 1px solid $N10;
+    }
   }
 
   .aside{
